  > "import Foo;" clauses are invalid Java code if Foo is not a fully
  > qualified namespace (e.g. "my.name.space.Foo"). The attached patch [...]
  > adds a test which makes the Java code generator output the "import"
  > clauses only when the class name is fully qualified.
- Fixed infinite loop on reading license file, see fgetc.patch at
  http://sourceforge.net/p/dia2code/patches/25/

07 Jul 2014:  Version 0.8.7
- Added ActionScript-3 code generator by Dima Levchenko
- Added evaluation of association role names and multiplicities (dimalev)
- Added support for roles and multiplicities in "UML - Association" version 0
- Fixed infinite loop in Ada code generation for static (class_scope)
  attributes
- Fixed missing Ada code generation for private static variable
- Removed support for unnamed associations, it created more problems than
  benefit. See http://sourceforge.net/p/dia2code/patches/21/#a9df
- Added support for embedded '#' in Dia comments, see dia2code2.patch at
  http://sourceforge.net/p/dia2code/patches/24/
- Changed C++ code generation for destructor of abstract class to emit
  neither a default destructor implementation nor pure virtual "= 0", see
  dia2code1.patch at http://sourceforge.net/p/dia2code/patches/21/

05 Jun 2014:  Version 0.8.6
- Added generation of header guard for C++ (-t cpp)
- Fixed null pointer dereference crash in handling of UML - Association
  observed on loading files example2.dia and example3.dia from
  http://dia2code.sourceforge.net/diagrams/
- Applied modified patch for increasing maximum permissible size of comment,
  http://sourceforge.net/p/dia2code/patches/17/
- Applied patch for fixing insufficient generated #include dependencies,
  http://sourceforge.net/p/dia2code/patches/19/
- Applied patch for printing numeric value associated to enum value in C++,
  http://sourceforge.net/p/dia2code/patches/20/
- Applied patch for removing inappropriate abstractness from generated