@@ -3,3 +3,16 @@ Makefile
 dia2code/dia2code
 dia2code/libdia2code.a
 config.*
+autom4te.cache
+compile
+configure
+depcomp
+install-sh
+libtool
+ltmain.sh
+m4
+missing
+dia2code/.deps
+*.in
+stamp-h2
+aclocal.m4
